Main changed to App

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "unlisted": false
   },
-  "main": "main.js",
+  "main": "app.js",
   "dependencies": {
     "fast-jwt": "^4.0.5"
   }
